<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_quotes">

    <fragment
        android:id="@+id/navigation_quotes"
        android:name="com.d3if2122.motivation_app.ui.quotes.QuotesFragment"
        android:label="@string/quotes"
        tools:layout="@layout/fragment_quotes" >
        <action
            android:id="@+id/action_navigation_quotes_to_navigation_about"
            app:destination="@id/navigation_about" />
    </fragment>
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/navigation_about" />

    <fragment
        android:id="@+id/navigation_histori"
        android:name="com.d3if2122.motivation_app.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.d3if2122.motivation_app.ui.AboutFragment"
        android:label="@string/about_the_app"
        tools:layout="@layout/fragment_about"/>

</navigation>