<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.quotes.QuotesFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".ui.quotes.QuotesFragment">

        <LinearLayout
            android:id="@+id/linearLayoutNama"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewNama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#43a047"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                android:gravity="center"
                android:text="@string/masukkan_nama" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutInputNama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutNama">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nama_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nama_inp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutJK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutInputNama">

            <TextView
                android:id="@+id/textViewJenisKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/pilih_gender"
                android:textColor="#43a047"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutRG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutJK">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/wanitaRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/wanita"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioButton
                    android:id="@+id/priaRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pria"
                    app:layout_constraintEnd_toStartOf="@+id/wanitaRadioButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutRG">

            <Button
                android:id="@+id/generateQuotesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:text="@string/generate"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutCardQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardQuotes"
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_margin="24sp"
                app:cardCornerRadius="24dp"
                app:cardElevation="7dp"
                android:layout_centerInParent="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24sp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/quotes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quotes"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagikan"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutCardQuotes" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>